--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Us_LichGacThi.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Us_LichGacThi.Designer.cs">
+      <DependentUpon>Us_LichGacThi.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frm_Main.resx">
       <DependentUpon>frm_Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +72,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Us_LichGacThi.resx">
+      <DependentUpon>Us_LichGacThi.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
