--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="LichThiBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XepLichBLL.cs" />
+    <Compile Include="XuatFileExcelBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
