--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -225,6 +225,7 @@
     <Compile Include="LichThiDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XepLichDAL.cs" />
+    <Compile Include="XuatFileExcelDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
